k8s/infrastructure/auth/authentik/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: auth
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "sso.lab.home.eudald.gr"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          port: 80
